[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Tilesets/LevelTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Levels/level_one.gd" type="Script" id=2]
[ext_resource path="res://Resources/fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Levels/WaveManager.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 736, -32, 0, 0, 0, 0, 736, 206, 0, 0, 0, 0, 729, 219, 0, 0, 0, 0, 713, 225, 0, 0, 0, 0, 576, 221, 0, 0, 0, 0, 554, 220, 0, 0, 0, 0, 546, 203, 0, 0, 0, 0, 544, 119, 0, 0, 0, 0, 536, 102, 0, 0, 0, 0, 512, 96, 0, 0, 0, 0, 132, 96, 0, 0, 0, 0, 105, 99, 0, 0, 0, 0, 98, 121, 0, 0, 0, 0, 99, 519, 0, 0, 0, 0, 102, 538, 0, 0, 0, 0, 117, 541, 0, 0, 0, 0, 510, 542, 0, 0, 0, 0, 535, 540, 0, 0, 0, 0, 542, 519, 0, 0, 0, 0, 548, 492, 0, 0, 0, 0, 577, 480, 0, 0, 0, 0, 702, 482, 0, 0, 0, 0, 726, 488, 0, 0, 0, 0, 736, 510, 0, 0, 0, 0, 741, 536, 0, 0, 0, 0, 771, 542, 0, 0, 0, 0, 832, 544, 0, 0, 0, 0, 858, 537, 0, 0, 0, 0, 865, 515, 0, 0, 0, 0, 864, -28 )
}

[node name="LevelControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="BackgroundTilemap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 6, 0, 65543, 5, 0, 65544, 6, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 6, 0, 65551, 6, 0, 131072, 5, 0, 131073, 6, 0, 131074, 5, 0, 131075, 6, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 6, 0, 131082, 6, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 6, 0, 196608, 5, 0, 196609, 2, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 262144, 5, 0, 262145, 2, 0, 262146, 6, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 6, 0, 327680, 5, 0, 327681, 5, 0, 327682, 6, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 6, 0, 327689, 5, 0, 327690, 5, 0, 327691, 6, 0, 327692, 6, 0, 327693, 2, 0, 327694, 5, 0, 327695, 5, 0, 393216, 6, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 6, 0, 393224, 6, 0, 393225, 5, 65536, 393226, 5, 0, 393227, 6, 0, 393228, 6, 0, 393229, 2, 65536, 393230, 5, 0, 393231, 5, 0, 458752, 6, 0, 458753, 2, 0, 458754, 6, 0, 458755, 6, 0, 458756, 5, 65536, 458757, 5, 0, 458758, 5, 0, 458759, 6, 0, 458760, 2, 65536, 458761, 5, 0, 458762, 2, 0, 458763, 6, 0, 458764, 6, 0, 458765, 2, 65536, 458766, 5, 0, 458767, 5, 0, 524288, 6, 0, 524289, 2, 65536, 524290, 2, 0, 524291, 2, 65536, 524292, 2, 65536, 524293, 2, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 589824, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 589838, 6, 0, 589839, 6, 0 )

[node name="TrackTilemap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -65525, 4, 0, -65523, 4, 0, 11, 4, 0, 13, 4, 0, 65537, 4, 65538, 65538, 4, 1, 65539, 4, 1, 65540, 4, 1, 65541, 4, 1, 65542, 4, 1, 65543, 4, 1, 65544, 4, 65539, 65547, 4, 0, 65549, 4, 0, 131073, 4, 0, 131080, 4, 0, 131083, 4, 0, 131085, 4, 0, 196609, 4, 0, 196616, 4, 65540, 196617, 4, 1, 196618, 4, 1, 196619, 4, 65541, 196621, 4, 0, 262145, 4, 0, 262157, 4, 0, 327681, 4, 0, 327693, 4, 0, 393217, 4, 0, 393229, 4, 0, 458753, 4, 0, 458760, 4, 65538, 458761, 4, 1, 458762, 4, 1, 458763, 4, 65539, 458765, 4, 0, 524289, 4, 65540, 524290, 4, 1, 524291, 4, 1, 524292, 4, 1, 524293, 4, 1, 524294, 4, 1, 524295, 4, 1, 524296, 4, 65541, 524299, 4, 65540, 524300, 4, 1, 524301, 4, 65541 )

[node name="UpgradeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TimeDisplay" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "10s"

[node name="UpgradePopup" type="PopupMenu" parent="."]
anchor_left = 0.15
anchor_top = 0.2
anchor_right = 0.85
anchor_bottom = 0.8
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true

[node name="Turrets" type="Node2D" parent="."]

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="WaveManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Startpoint" type="Position2D" parent="."]
position = Vector2( 735, -31 )

[node name="Endpoint" type="Position2D" parent="."]
position = Vector2( 863, -27 )

[connection signal="level_start" from="." to="WaveManager" method="_on_level_start"]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_UpgradeTimer_timeout"]
[connection signal="id_pressed" from="UpgradePopup" to="." method="_on_UpgradePopup_id_pressed"]
